tests/snapshots/snapshots__exclude_transitive_dep.snap
---
source: tests/snapshots.rs
expression: stdout
---
pub(crate) use __cargo_equip::prelude::*;

fn main() {
    assert_eq!(Some(1), mylib::hamming_wrapper("abc", "abd"));
}

// The following code was expanded by `cargo-equip`.

///  # Bundled libraries
/// 
///  - `path+file://$CARGO_MANIFEST_DIR/tests/exclude-transitive-dep/mylib#0.0.0` published in **missing** licensed under `MIT` as `crate::__cargo_equip::crates::mylib`
/// 
///  # License and Copyright Notices
/// 
///  - `path+file://$CARGO_MANIFEST_DIR/tests/exclude-transitive-dep/mylib#0.0.0`
/// 
///      ```text
///      Copyright 2020 Ryo Yamashita
/// 
///      Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
/// 
///      The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
/// 
///      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
///      ```
#[cfg_attr(any(), rustfmt::skip)]
#[allow(unused)]
mod __cargo_equip {
    pub(crate) mod crates {
        pub mod mylib {pub fn hamming_wrapper(a:&str,b:&str)->Option<usize>{strsim::hamming(a,b).ok()}}
    }

    pub(crate) mod macros {
        pub mod mylib {}
    }

    pub(crate) mod prelude {pub use crate::__cargo_equip::crates::*;}

    mod preludes {
        pub mod mylib {}
    }
}
